# ADBRClient

./: Cargo.toml  Cross.toml  README.md  build_deb.sh
releases/: adbr_1.0.0-1.deb
src/: constants.rs  lib.rs  main.rs  utils.rs
src/adb/: client.rs  mod.rs
src/adb/app_installation/: install.rs  mod.rs  uninstall.rs
src/adb/debugging/: debugging.rs  mod.rs
src/adb/file_transfer/: mod.rs  pull.rs  push.rs
src/adb/io/: io.rs
src/adb/network/: forward.rs  mod.rs  reverse.rs
src/adb/protocol/: protocol.rs
src/adb/scripting/: mod.rs  scripting.rs
src/adb/security/: mod.rs  security.rs
src/adb/shell/: shell.rs
src/enums/: device_transport.rs  mod.rs  pull_result.rs  push_result.rs
src/models/: mod.rs  remote_dir_entry.rs  remote_metadata.rs  stat_data.rs
tests/: client_tests.rs
