[package]
name = "adbr"
version = "1.0.0"
edition = "2021"

[lib]
name = "adbr"
path = "src/lib.rs"

[[bin]]
name = "adbr"
path = "src/main.rs"

[profile.release]
lto = true

[dependencies]
tokio = { version = "1", features = ["full"] }
termios = "0.3"
nix = { version = "0.29.0", features = ["poll"] }
atty = "0.2"
chrono = "0.4.38"
walkdir = "2.3.2"
filetime = "0.2.25"
indicatif = "0.17.8"
openssl = { version = "0.10.66", features = ["vendored"] }
dirs = "5.0.1"
rand = "0.9.0-alpha.2"
ctor = "0.2.8"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }